--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,18 @@
 .App {
   text-align: center;
 }
+.login-form {
+  max-width: 300px;
+}
+.login-form-forgot {
+  float: right;
+}
+.ant-col-rtl .login-form-forgot {
+  float: left;
+}
+.login-form-button {
+  width: 100%;
+}
 .vl {
   border-left: 1px solid red;
   height: 30px;
