--- a/src/container/Auth/SignIn.css
+++ b/src/container/Auth/SignIn.css
@@ -3,9 +3,8 @@
 
 
 .login {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
+  width: "15%";
+  margin-top: "20%";
   font-family: 'Comfortaa', cursive;
 }
 
