--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,18 @@
 .App {
   text-align: center;
 }
+.image-container {
+  align-items: center;
+  width: 170px; /* Set the desired width */
+  height: 200px; /* Set the desired height */
+  overflow: hidden; /* Optional: hide any part of the image that exceeds the container size */
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Optional: adjust the object-fit property to fit your use case */
+}
 .login-form {
   max-width: 300px;
 }
