--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,18 @@
   height: 200px; /* Set the desired height */
   overflow: hidden; /* Optional: hide any part of the image that exceeds the container size */
 }
-
+.image-container1 {
+  align-items: center;
+  width: 100px; /* Set the desired width */
+  height: 100px; /* Set the desired height */
+  overflow: hidden; /* Optional: hide any part of the image that exceeds the container size */
+}
 .image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Optional: adjust the object-fit property to fit your use case */
+}
+.image-container1 img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Optional: adjust the object-fit property to fit your use case */
